begynt på oppgaver eline

--- a/notebooks/LLM101_v2.ipynb
+++ b/notebooks/LLM101_v2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LLM 101"
+    "# LLM for alle - Introduksjonskurs til språkmodeller med Python og Azure OpenAI"
    ]
   },
   {
@@ -29,10 +29,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task\n",
+    "# Oppgave\n",
+    "Du jobber i et IT-selskap og har fått i oppgave å analysere svarene fra en intern medarbeiderundersøkelse. Undersøkelsen er anonym, og du har fått tilsendt en CSV-fil med 50 tilbakemeldinger – én per ansatt. Målet er å finne ut hva folk er fornøyde eller misfornøyde med, og særlig se nærmere på temaene Nettverk, Opplæring og IT-support, som ledelsen er ekstra interessert i. Tilbakemeldinger som ikke passer i disse kategoriene skal også få sin plass. Til slutt skal du lage en oppsummering som kan sendes til ledelsen.\n",
     "\n",
-    "TODO:\n",
-    "- Task description"
+    "For å jobbe effektivt bruker du en språkmodell til å hjelpe deg med både kategorisering og oppsummering. \n",
+    "\n",
+    "**Oppgaven blir dermed å bruke en språkmodell til å kategorisere samt oppsummere tilbakemeldingene fra undersøkelsen.** \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Datasett"
    ]
   },
   {
@@ -41,12 +50,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importerer rådataen med tilbakemeldinger, en rad per ansatt. Alle ansatte har svart på undersøkelsen. \n",
+    "\n",
     "import pandas as pd\n",
     "enr_path = \"../files/random_out.csv\"\n",
     "df = pd.read_csv(enr_path)\n",
     "df.head()\n",
     "\n",
-    "## Using a language model through the API"
+    "## Using a language model through the API ???"
    ]
   },
   {
@@ -396,7 +407,7 @@
    "source": [
     "(df[\"AI Classification\"] == df[\"Category\"]).value_counts()\n",
     "\n",
-    "# TODO: Replace this be an evaluation function which is imported"
+    "#TODO: Replace this be an evaluation function which is imported"
    ]
   },
   {
@@ -405,6 +416,30 @@
    "source": [
     "## Chain-of-thought\n",
     "\n",
+    "Chain of Thought (CoT) er en teknikk innen prompt engineering som hjelper språkmodeller med å løse oppgaver som krever flere tankesteg. I stedet for å hoppe rett til svaret, blir modellen ledet gjennom en logisk og trinnvis prosess, noe som gir mer presise og gjennomtenkte svar – spesielt på komplekse problemer [1]. \n",
+    "\n",
+    "Du kan altså be modellen om å \"tenke høyt\" under oppgaven og forklare stegene sine før den leverer et endelig svar. Dette ber du om i prompten som sendes inn. \n",
+    "\n",
+    "Eksempel på en prompt **uten** CoT: \n",
+    "\n",
+    "    Prompt: \"Hvor mange armer har Eline og Kaspara?\"\n",
+    "\n",
+    "    Svar: \"4\"\n",
+    "\n",
+    "Eksempel på en prompt **med** CoT:\n",
+    "\n",
+    "    Prompt: \"Hvor mange armer har ELine og Kaspara? Tenk trinn for trinn.\"\n",
+    "\n",
+    "    Svar: \"En person har to armer. To personer betyr 2x2 = 4 armer. Svaret er 4.\"\n",
+    "\n",
+    "Det kan være fordelaktig å bruke CoT når man jobber med komplekse oppgaver, da nøyaktigheten på outputet fra modellen øker når den \"får lov\" til å jobbe seg gjennom problemet. Dette gir ofte bedre resultater på logiske oppgaver, eller oppgaver med flere steg. \n",
+    "\n",
+    "I tillegg kan du se hvordan modellen tenker, som gjør det lettere for deg å evaluere svaret. Det blir også lettere å se hvor det gikk galt hvis modellen svarer feil.\n",
+    "\n",
+    "### *Kilder*\n",
+    "[1] xxxx, Link: https://www.ibm.com/think/topics/chain-of-thoughts \n",
+    "\n",
+    "---\n",
     "TODO:\n",
     "- Forklare hva chain-of-thought er og hvorfor det kan være nyttig"
    ]
@@ -420,12 +455,7 @@
     "    chain_of_thought: str = Field(\n",
     "        description=\"Use this space to think through the categorization.\"\n",
     "    )\n",
-    "    category: Literal[\n",
-    "        \"Network\",\n",
-    "        \"Training\",\n",
-    "        \"IT-support\",\n",
-    "        'Other',\n",
-    "    ] = Field(\n",
+    "    category: CATEGORIES = Field(\n",
     "        description=\"Chosen category for the feedback. Choose 'Other' if the other categories provided are not a good fit.\"  ## noqa: E501\n",
     "    )\n",
     "\n",
@@ -451,22 +481,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "result.category"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resonneringsmodell\n",
+    "Resonneringsmodeller, som Azure Open AI sin O3-mini-modell, er språkmodeller som er spesielt trent på å tenke før de svarer. Slike modeller vil altså produsere en trinnvis tenkning før det endelige svaret leveres. Resonneringsmodeller er fordelaktige å bruke til oppgaver som krever kompleks problemløsning, logisk tenkning som koding eller matematikk eller til oppgaver med flere steg. De vil også være fordelaktige å bruke i situasjoner der nøyaktighet og forklarbarhet er viktig [2]. \n",
+    "\n",
+    "Dette kan minne om CoT, men det er en viktig forksjell her. CoT er en teknikk du kan bruke med språkmodeller for å gjøre dem bedre til å resonnere. Det er raskt og fleksibelt.\n",
+    "Resonneringsmodeller er som nevnt en egen type modell som passer for oppgaver som krever presis og systematisk tenkning. Du vil få enda mer presise svar med en resonneringsmodell sammenlignet med CoT. \n",
+    "\n",
+    "#### Kilder\n",
+    "[2] xxx, Link: https://platform.openai.com/docs/guides/reasoning?api-mode=chat"
    ]
   },
   {
@@ -475,7 +505,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.category"
+    "## Kategoriser radene som ligger i *Other*\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Nå har vi definert passende kategorier for alle tilbakemeldinhgene. \n",
+    "#Videre vil vi få modellen til å oppsummere per kategori, slik at vi sitter igjen med en overordnet oversikt. \n",
+    "\n",
+    "def summarize(feedback_txt : str, struktur, llm_model) -> dict:\n",
+    "\n",
+    "# Now that we have defined fitting categories for the feedback, we can use a reasoning model to create a summary of the rows per category to provide an overall overview\n",
+    "def summarize(feedback_txt : str, struktur, llm_model) -> dict:\n",
+    "\n",
+    "    # Prompt\n",
+    "    task = f\"\"\"\n",
+    "You are a domain expert in internal IT operations and organizational analysis. You will be provided with a dataset containing qualitative feedback from employees in an IT company. \n",
+    "Each row in the dataset represents a feedback entry and is associated with a specific category.\n",
+    "\n",
+    "For each category, carefully:\n",
+    "1. Read and interpret the feedback entries assigned to that category.\n",
+    "2. Identify core themes, recurring patterns, and contrasting opinions within that category.\n",
+    "3. Evaluate the feedback logically: What are the likely underlying causes of recurring issues or praises? Are there signs of systemic problems, isolated incidents, or misaligned expectations?\n",
+    "4. Summarize each category in 3 to 6 bullet points, highlighting key sentiments (positive and negative), representative concerns or compliments, and any significant outliers\n",
+    "\n",
+    "Present your findings in a clean, professional way with one section per category. \n",
+    "\n",
+    "This is the employee feedback data: {feedback_txt}\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Defining structured output for the model\n",
+    "    structured_llm = llm_model.with_structured_output(\n",
+    "        struktur, method=\"function_calling\"\n",
+    "    )\n",
+    "\n",
+    "    # Prompt model\n",
+    "    response_sum = structured_llm.invoke(task)\n",
+    "    # Return the response\n",
+    "    return response_sum.__dict__\n",
+    "\n",
+    "# Print head of response\n",
+    "\n",
+    "\n",
+    "### Forslag til oppgave\n",
+    "\n",
+    "\n",
+    "### Fasit\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Herfra og ned er gammel kode. kan trolig slettes men tørr ikke helt enda. "
    ]
   },
   {
@@ -489,34 +583,6 @@
     "    )\n",
     "\n",
     "response = structured_llm.invoke(\"Send inn prompt + data\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CategorizeFromOptions(BaseModel):\n",
-    "    \"\"\"Categorization of IT-questionaire feedback.\"\"\"\n",
-    "\n",
-    "    category: Literal[\n",
-    "        \"Network\",\n",
-    "        \"IT Training\",\n",
-    "        \"IT Support\",\n",
-    "        'Other'\n",
-    "    ] = Field(\n",
-    "        description=\"Categorize the feedback into the most fitting category. If the categories provided are not a perfect fit, default to 'Other'.\"\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Chain of thought"
    ]
   },
   {
@@ -620,49 +686,6 @@
    "source": [
     "# Case"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Datasettet (FLYTT TIL INTRO)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "class FeedbackData:\n",
-    "    \"\"\"\n",
-    "    Class containing fake datasets by us :)\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Load a DataFrame with a specific version of a CSV\n",
-    "\n",
-    "    enr_path = \"../files/random_out.csv\"\n",
-    "    df = pd.read_csv(enr_path)#.head(20)\n",
-    "    df_mini = df.head(5)\n",
-    "\n",
-    "\n",
-    "# print(FeedbackData.df[\"Feedback\"][0])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -944,7 +967,7 @@
    "source": [
     "1. Skulle man hatt en oppgave til slutt for de som er fort ferdig hvor de sender inn hele undersøkelsen og ber modellen velge beste kategorier før vi igjen bruker de kategoriene i structured output for å kategorisere. kjør så hele på nytt og se om du synes resultatene ble bedre. \n",
     "\n",
-    "2. Hvordan kunne dette vært gjort bedre? Er det "
+    "2. Hvordan kunne dette vært gjort bedre? Be LLMen si hva som kunne vært gjort annerledes for å skape mer verdi. \n"
    ]
   }
  ],
