--- a/notebooks/LLM101_v2.ipynb
+++ b/notebooks/LLM101_v2.ipynb
@@ -518,13 +518,25 @@
     "# Nå har vi definert passende kategorier for alle tilbakemeldinhgene. \n",
     "#Videre vil vi få modellen til å oppsummere per kategori, slik at vi sitter igjen med en overordnet oversikt. \n",
     "\n",
-    "def summarize(feedback_txt : str, struktur, llm_model) -> dict:\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_core.output_parsers import JsonOutputKeyParser\n",
     "\n",
-    "# Now that we have defined fitting categories for the feedback, we can use a reasoning model to create a summary of the rows per category to provide an overall overview\n",
-    "def summarize(feedback_txt : str, struktur, llm_model) -> dict:\n",
+    "# Din tur (forslag)\n",
+    "'''Lag en LCEL-kjede som tar resultatet fra forrige oppgave (feedback med kategori) og lager en oppsummering\n",
+    "## per kategori ved hjelp av en LLM. Inkluder structured output.'''\n",
     "\n",
-    "    # Prompt\n",
-    "    task = f\"\"\"\n",
+    "    # Tips: Begynn med en funksjon som lager LCEL-kjeden\n",
+    "def summary_chain(x, y):\n",
+    "    prompt = ___\n",
+    "\n",
+    "    # Tips 2: Bruk structured output med method = \"function_calling\"\n",
+    "\n",
+    "\n",
+    "# Fasit\n",
+    "## OBS: bytt ut feedback_txt med resultat fra forrige oppgave\n",
+    "def build_summary_chain(struktur, llm_model):\n",
+    "    # 1. Prompt Template\n",
+    "    prompt = PromptTemplate.from_template(\"\"\"\n",
     "You are a domain expert in internal IT operations and organizational analysis. You will be provided with a dataset containing qualitative feedback from employees in an IT company. \n",
     "Each row in the dataset represents a feedback entry and is associated with a specific category.\n",
     "\n",
@@ -537,25 +549,18 @@
     "Present your findings in a clean, professional way with one section per category. \n",
     "\n",
     "This is the employee feedback data: {feedback_txt}\n",
-    "    \"\"\"\n",
+    "\"\"\")\n",
     "\n",
-    "    # Defining structured output for the model\n",
-    "    structured_llm = llm_model.with_structured_output(\n",
-    "        struktur, method=\"function_calling\"\n",
-    "    )\n",
+    "    # 2. Structured output LLM\n",
+    "    structured_llm = llm_model.with_structured_output(struktur, method=\"function_calling\")\n",
     "\n",
-    "    # Prompt model\n",
-    "    response_sum = structured_llm.invoke(task)\n",
-    "    # Return the response\n",
-    "    return response_sum.__dict__\n",
+    "    # 3. LCEL Chain\n",
+    "    chain = prompt | structured_llm\n",
     "\n",
-    "# Print head of response\n",
+    "    return chain\n",
     "\n",
-    "\n",
-    "### Forslag til oppgave\n",
-    "\n",
-    "\n",
-    "### Fasit\n"
+    "chain = build_summary_chain(struktur, llm_model)\n",
+    "response = chain.invoke({\"feedback_txt\": feedback_txt})\n"
    ]
   },
   {
@@ -563,7 +568,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ekstraoppgave\n",
+    "'''Bruk oppsummeringen til å lage en rapport som kan sendes til ledelsen med forslag til endringer for å forbedre\n",
+    "resultatene på neste års undersøkelse'''"
+   ]
   },
   {
    "cell_type": "markdown",
