--- a/notebooks/LLM101_vE_26mai.ipynb
+++ b/notebooks/LLM101_vE_26mai.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# Introduksjon\n",
     "\n",
-    "Etter prosjektet vi gjorde for Elkem fikk vi hands-on erfaring med å utvikle og bruke språkmodeller (LLMer) i praksis. Vi så hvor effektivt dette kan være for å spare tid, redusere kostnader og automatisere manuelle oppgaver – på en måte som enkelt kan gjenbrukes i andre prosjekter.\n",
+    "Etter prosjektet vi gjorde for Elkem fikk vi hands-on erfaring med å utvikle og bruke språkmodeller (LLMer) i praksis. Vi så hvor effektivt dette kan være for å spare tid, redusere kostnader og automatisere manuelle oppgaver på en måte som enkelt kan gjenbrukes i andre prosjekter.\n",
     "\n",
     "I dette kurset bruker vi et konkret og gjenkjennbart case: analyse av resultatene fra en medarbeiderundersøkelse – en oppgave mange sliter med å strukturere. Vi skal lære dere å koble dere til en LLM via API, bruke LangChain Expression Language (LCEL) til å bygge AI-kjeder og hente ut strukturert innsikt med Pydantic – alt i én oversiktlig notebook.\n",
     "\n",
@@ -142,7 +142,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bruk av språkmodeller gjennom en API (Using a language model through the API)"
+    "Før vi går løs på oppgaven skal du bli bedre kjent med verktøyene og metodene vi bruker. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bruk av språkmodeller gjennom en API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "API = Application Programming Interface. Et grensesnitt som lar forskjellige programmer kommunisere med hverandre. "
    ]
   },
   {
@@ -152,7 +166,7 @@
     "### En vanlig LLM-spørring\n",
     "Enkle LLM-spørringer er bygget opp av noen sentrale deler:\n",
     "\n",
-    "1. Tilkobling til en API, som feks. Azure OpenAI\n",
+    "1. Tilkobling til en ressurs, som feks. Azure OpenAI\n",
     "\n",
     "2. En prompt, som vil si en tekstbasert forespørsel/instruks\n",
     "\n",
@@ -274,9 +288,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hvordan lage en enkel kjede med LangChain Expression Language (LCEL)\n",
+    "## Hvordan lage en enkel AI-kjede med LangChain Expression Language (LCEL)\n",
     "\n",
-    "LCEL er en metode for å bygge og kjøre såkalte *kjeder* i LangChain på. Kjeder, eller chains, brukes for å koble sammen ulike AI-komponenter. F.eks. kan språkmodeller, datakilder og logikk kobles sammen til én sammenhengende prosess, dvs. en kjede. LCEL gir et standardisert språk for å definere disse kjedene, og er brukervennlig fordi man slipper å lage alt manuelt med kode. Med andre ord får du en \"oppskrift\" på hvordan AI-komponentene dine skal jobbe sammen på en rask og skalerbar måte.\n",
+    "LCEL er en metode for å bygge og kjøre såkalte *kjeder* i LangChain på. Kjeder, eller chains, brukes for å koble sammen ulike AI-komponenter. F.eks. kan språkmodeller, datakilder og logikk kobles sammen til én sammenhengende prosess, dvs. en kjede. LCEL gir et standardisert språk for å definere disse kjedene, og er brukervennlig fordi man slipper å lage alt manuelt med kode. Med andre ord får du en \"oppskrift\" på hvordan AI-komponentene dine skal jobbe sammen.\n",
     "\n",
     "**Fordelene med LCEL**\n",
     "1. Støtter parallell og asynkron kjøring - Ulike deler av kjeden kan kjøre samtidig, og systemet kan behandle flere forespørsler på en gang. Dermed kan oppgaver behandles raskere. \n",
@@ -710,7 +724,7 @@
    "source": [
     "## Chain-of-thought\n",
     "\n",
-    "Chain of Thought (CoT) er en teknikk innen prompt engineering som hjelper språkmodeller med å løse oppgaver som krever flere tankesteg. I stedet for å hoppe rett til svaret, blir modellen ledet gjennom en logisk og trinnvis prosess, noe som kan gi mer presise og gjennomtenkte svar [1]. \n",
+    "Chain of Thought (CoT) er en teknikk innen prompt engineering som hjelper språkmodeller med å løse oppgaver som krever flere tankesteg. I stedet for å hoppe rett til svaret, blir modellen ledet gjennom en logisk og trinnvis prosess som kan gi mer presise og gjennomtenkte svar [1]. \n",
     "\n",
     "Du kan altså be modellen om å \"tenke høyt\" under oppgaven og forklare stegene sine før den leverer et endelig svar. Dette ber du om i prompten som sendes inn. \n",
     "\n",
@@ -726,11 +740,11 @@
     "\n",
     "    Svar: \"En person har to armer. To personer betyr 2x2 = 4 armer. Svaret er 4.\"\n",
     "\n",
-    "Det kan være fordelaktig å bruke CoT når man jobber med komplekse oppgaver, da nøyaktigheten på outputet fra modellen øker når den \"får lov\" til å jobbe seg gjennom problemet. Dette gir ofte bedre resultater på logiske oppgaver eller oppgaver med flere steg. \n",
+    "Det kan være fordelaktig å bruke CoT når man jobber med komplekse oppgaver, da nøyaktigheten på outputet fra modellen øker når den \"får lov\" til å jobbe seg gjennom problemet. \n",
     "\n",
     "I tillegg kan du se hvordan modellen tenker, som gjør det lettere for deg å evaluere svaret. Det blir også lettere å se hvor det gikk galt hvis modellen svarer feil.\n",
     "\n",
-    "### *Kilder*\n",
+    "##### *Kilder*\n",
     "[1] xxxx, Link: https://www.ibm.com/think/topics/chain-of-thoughts "
    ]
   },
@@ -788,13 +802,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Resonneringsmodeller, som Azure Open AI sin O4-mini-modell, er språkmodeller som er spesielt trent på å tenke før de svarer. Slike modeller vil altså produsere en trinnvis tenkning før det endelige svaret leveres. Resonneringsmodeller er fordelaktige å bruke til oppgaver som krever kompleks problemløsning, logisk tenkning som koding eller matematikk eller til oppgaver med flere steg. De vil også være fordelaktige å bruke i situasjoner der nøyaktighet og forklarbarhet er viktig [2]. \n",
+    "Resonneringsmodeller, som Azure Open AI sin O4-mini-modell, er språkmodeller som er spesielt trent på å tenke før de svarer. Altså *resonnerer* de seg frem til et svar, i motsetning til en typisk LLM som gir raske svar. \n",
+    "Resonneringsmodeller bruker chain of thought til å bryte ned oppgaven i mindre deler, for å så jobbe seg gjennom problemstillingen stegvis [3]. Dette er fordelaktig å bruke til oppgaver som krever kompleks problemløsning, logisk tenkning som koding eller matematikk eller til oppgaver med flere steg. Det vil også være fordelaktig å bruke i situasjoner der nøyaktighet og forklarbarhet er viktig [2]. \n",
     "\n",
-    "Dette kan minne om CoT, men det er en viktig forksjell her. CoT er en teknikk du kan bruke med språkmodeller for å gjøre dem bedre til å resonnere. Det er raskt og fleksibelt.\n",
-    "Resonneringsmodeller er som nevnt en egen type modell som er trent på på løse oppgaver som krever presis og systematisk tenkning. Den har innebygd funksjonallitet for å tenke trinnvis og arbeide seg systematisk gjennom oppgaver. ARNE HJELP\n",
     "\n",
-    "#### Kilder\n",
-    "[2] xxx, Link: https://platform.openai.com/docs/guides/reasoning?api-mode=chat"
+    "##### Kilder\n",
+    "[2] OpenAI, Link: https://platform.openai.com/docs/guides/reasoning?api-mode=chat\n",
+    "[3] Tzur, A. *(2025)*. Resonneringsmodeller: AI som tenker før de svarer. AIavisen: https://aiavisen.no/resonneringsmodeller/ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Eksempel på resonnering vs. ikke resonnering"
    ]
   },
   {
@@ -849,7 +870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aha! Her ser vi et eksempel på at resonneringsmodellen tenker riktig, mens det vanlige llm-kallet uten resonnering går rett på lureoppgaven. "
+    "Aha! Her ser vi et eksempel på at resonneringsmodellen tenker riktig fordi den bryter ned problemet, mens det vanlige llm-kallet uten resonnering går fem på lureoppgaven og svarer feil. "
    ]
   },
   {
@@ -2704,13 +2725,6 @@
     "from IPython.display import Markdown\n",
     "\n",
     "display(Markdown(summary.summary))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# -----------------------------------------------------------------------------------"
    ]
   },
   {
