--- a/notebooks/LLM101_FINAL.ipynb
+++ b/notebooks/LLM101_FINAL.ipynb
@@ -44,9 +44,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Feedback</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>The network infrastructure is robust and usually efficient, though intermittent glitches sometimes hamper productivity and clarity.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Our current infrastructure aligns with business needs, yet occasional rigidity in legacy systems hinders innovative approaches.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>I appreciate the proactive approach to security, though the multi-step authentication process sometimes seems overly complicated.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Our tools maintain high quality with intuitive design and regular updates, even though rare performance lags can hinder productivity.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>The IT-support team is consistently prompt and courteous, though occasional miscommunications lead to fleeting moments of uncertainty.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID  \\\n",
+       "0   1   \n",
+       "1   2   \n",
+       "2   3   \n",
+       "3   4   \n",
+       "4   5   \n",
+       "\n",
+       "                                                                                                                                 Feedback  \n",
+       "0     The network infrastructure is robust and usually efficient, though intermittent glitches sometimes hamper productivity and clarity.  \n",
+       "1         Our current infrastructure aligns with business needs, yet occasional rigidity in legacy systems hinders innovative approaches.  \n",
+       "2       I appreciate the proactive approach to security, though the multi-step authentication process sometimes seems overly complicated.  \n",
+       "3   Our tools maintain high quality with intuitive design and regular updates, even though rare performance lags can hinder productivity.  \n",
+       "4  The IT-support team is consistently prompt and courteous, though occasional miscommunications lead to fleeting moments of uncertainty.  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import the raw data containing the feedback. There is one row per employee.\n",
     "\n",
@@ -91,15 +167,26 @@
     "3. Sending av prompt til språkmodellen for å hente en respons\n",
     "\n",
     "\n",
-    "Som en del av tilkoblingen er det vanlig å oppgi en temperaturparameter. Denne parametreren angir nivået av presisjon du ønsker å få i responsen fra språkmodellen, og kan enten måles på en skala fra \"low\" til \"high\" eller numerisk fra 0 til 1.\n",
-    "Hvis denne parameteren settes til \"low\"/nærme 0 tillater du liten grad av variasjon og kreativitet i responsen, og du vil få tryggere og mer forutsigbare svar. Hvis den derimot settes til høy/nærme 1 tillater du større grad av kreativitet og detaljer, men vil følgelig også få en mer uforutsigbar respons. "
+    "Som en del av tilkoblingen er det vanlig å oppgi en temperaturparameter. Denne parametreren angir nivået av presisjon du ønsker å få i responsen fra språkmodellen, og kan måles numerisk fra 0 til 1.\n",
+    "Hvis denne parameteren settes nærme 0 tillater du liten grad av variasjon og kreativitet i responsen, og du vil få tryggere og mer forutsigbare svar. Hvis den derimot settes nærme 1 tillater du større grad av kreativitet og detaljer, men vil følgelig også få en mer uforutsigbar respons. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/IPython/core/interactiveshell.py:3377: UserWarning: WARNING! reasoning_effort is not default parameter.\n",
+      "                reasoning_effort was transferred to model_kwargs.\n",
+      "                Please confirm that reasoning_effort is what you intended.\n",
+      "  if (await self.run_code(code, result,  async_=asy)):\n"
+     ]
+    }
+   ],
    "source": [
     "# Connect through the API\n",
     "from langchain_openai import AzureChatOpenAI\n",
@@ -167,14 +254,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'llm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_22022/149479526.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Send the prompt and receive a response\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mllm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minvoke\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemperature\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtemperature\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# Print the response from the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'llm' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Test out the temperature-parameter\n",
     "\n",
     "# Define the prompt\n",
-    "prompt = 'Hei! Fortell meg en morsom historie om en katt. Skriv maks 5 setninger.'\n",
+    "prompt = 'Tell me a funny story about a cat. Write max. 5 sentences.'\n",
     "\n",
     "# Set temperature (0 = most predictable, 1 = most creative and random)\n",
     "temperature = 0.9  # Try to switch this out with 0.1 and 0.5 to see the difference. \n",
@@ -732,6 +831,7 @@
    "source": [
     "df\n",
     "\n",
+    "# Spør Arne\n",
     "# Per nå bruker den kategoriene vi fikk fra LLMen. Når den kategorieserer Other får vi mange nye og litt varierende kategorier. Det er også mange av de. Skulle vi bare brukt den som eksempel også bruke den ekte kategoriseringe her?"
    ]
   },
@@ -740,19 +840,6 @@
    "metadata": {},
    "source": [
     "Oi! Her fikk vi mange andre kategorier. Du kan sammenligne AI sin kategorisering med fasiten i kolonnen \"Category\" - reflekter litt rundt hvorvidt AI er for spesifik. Her kan f.eks. prompten skrives om for å få mer / mindre spesifikke kategorier. Kunne vi definert en til kategori som \"eksempel\" for modellen for å unngå så mange kategorier med små variasjoner."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Store the results from the categorization of \"Others\" in a separate variable that is not part of the actual categories.\n",
-    "# This can then be used in the tasks below without confusing the LLM about which categories it should recognize.\n",
-    "\n",
-    "categorized_survey = df[['ID','Feedback','AI Classification']]\n",
-    "categorized_survey"
    ]
   },
   {
@@ -976,8 +1063,7 @@
    "metadata": {},
    "source": [
     "## Fantastisk! \n",
-    "Du har nå fullført kurset *LLM for alle*, og jobbet deg gjennom hvordan du kan bruke metoder og verktøy som LCEL og structured output til å....\n",
-    "For de aller ivrigste har vi laget en ekstraoppgave helt til slutt - prøv deg frem hvis du har tid!"
+    "Du har nå fullført kurset *LLM for alle*, og jobbet deg gjennom hvordan du kan bruke metoder og verktøy som LCEL og structured output til å...."
    ]
   },
   {
@@ -1028,7 +1114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1042,7 +1128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
