finishing touches on structured section

--- a/notebooks/LLM101_FINAL.ipynb
+++ b/notebooks/LLM101_FINAL.ipynb
@@ -524,28 +524,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Datavalidering og struktur"
+    "# Datavalidering og strukturering med Pydantic"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pydantic \n",
-    "Pydantic er et Python-bibliotek for datavalidering og datastrukturering. Hovedklassen i Pydantic heter BaseModel og er klassen vi arver fra når vi lager våre egne oppsett. Gjennom BaseModel får vi automatisk funksjonalitet som kan:\n",
-    "1. Validere innhold du sender inn\n",
-    "    - Eks: Du definerer en liste med godkjente land, \"Norge, Sverige, Finland\", da vil ikke pydantic godkjenne \"Australia\".\n",
-    "2. Konvertere data til riktig type\n",
-    "    - Eks: Du definerer at output skal være en int og sender inn '1', pydantic vil da returnere 1 (som int)\n",
-    "3. Påtvinge JSON-formatering\n",
-    "    - Sørger for at responsen LLMen gir matcher JSON-skjemaet til Pydantic. Dette gjør at vi kan være sikre på strukturen til outputen, som for eksempel er svært nyttig om vi ønsker å bruke outputen fra en modell som input i en annen. \n",
-    "\n",
-    "\n",
-    "\n",
-    "## Structured output \n",
-    "I denne konteksten refererer structured output til strategien og verktøyene vi bruker for å forsikre oss om at dataen vår blir organisert på en måte vi definerer på forhånd. \n",
-    "Funksjonalitet i Pydantic biblioteket lar oss bestemme strukturen på outputen gjennom å spesifisere felter, definere typer (eks. int, str, List[int]) og validere data.\n",
-    "I dette kurset kommer vi til å bruke BaseModel til å lage våre egne klasser for å sikre at det vi mottar fra modellene når vi prompter de kommer på akkurat den formen vi ønsker. "
+    "Når vi jobber med store språkmodeller (LLMs), er det viktig å kunne styre og validere output. Vi ønsker ikke bare et sva, men et svar på riktig format.\n",
+    "Derfor bruker vi verktøy som Pydantic, som hjelper oss med:\n",
+    "- Å strukturere data på en tydelig og eksplisitt måte\n",
+    "- Å validere at data har riktig type og verdi\n",
+    "- Å tvinge output fra LLM til å følge en bestemt mal (for eksempel en JSON-struktur)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hva er Pydantic?\n",
+    "Pydantic er et Python-bibliotek for datavalidering basert på Python type hints. Hovedklassen er BaseModel, som vi arver fra når vi definerer vår egen datastruktur.\n",
+    "Pydantic gir oss:\n",
+    "1. Datavalidering\n",
+    "    - Du kan begrense hva som er lovlige verdier. F.eks: Godkjente land = [\"Norge\", \"Sverige\", \"Finland\"] → Australia blir avvist.\n",
+    "2. Typekonvertering\n",
+    "    - Hvis du sier at du forventer en int og sender inn \"1\" (str), vil den konverteres automatisk.\n",
+    "3. Strukturell kontroll\n",
+    "    - Du kan bruke Pydantic-modellen til å validere at output fra LLM matcher en bestemt struktur, som JSON."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Eksempel: Enkel modell med én kategori "
    ]
   },
   {
@@ -565,8 +577,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I eksempelet over har vi laget vår egen klasse 'Categorize' som arver av BaseModel.\n",
-    "For variabelen category har vi brukt type hinting ( x: type ) for å definere typen Pydantic skal forvente at category er lik. Dette for ekesempel blir da ulovlig"
+    "Her har vi definert en modell med ett felt: category.\n",
+    "Modellen krever at category er en streng og vil derfor avvise andre typer. Dette blir for eksempel ulovlig"
    ]
   },
   {
@@ -622,11 +634,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vi bruker også funksjonen Field, denne kan du bruke til å sette standardverdier, valideringsregler og beskrivelser.\n",
-    "I dette kurset bruker vi kun beskrivelse, men for de spesielt interesserte kan dere lese mer om funksjonaliteten [her](https://docs.pydantic.dev/latest/concepts/fields/).\n",
-    "\n",
-    "For å få LLMen til å skjønne at den må følge reglene vi har definert i klassen vår bruker vi wrapperen with_structured_output(...). \n",
-    "Denne wrapper kallet vårt til språkmodellen med logikk som forsikrer at outputen følger strukturen vi har definert i klassen."
+    "```Field()``` kan brukes til å spesifisere beskrivelse, standardverdi, valideringsregler og mer. Vi bruker det her for å gi modellen litt mer kontekst.\n",
+    "De spesielt interesserte kan lese mer om funksjonaliteten [her](https://docs.pydantic.dev/latest/concepts/fields/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bruke modellen sammen med LLM\n",
+    "Vi bruker en wrapperen ```with_structured_output(...)``` for å fortelle LLMen at den må svare med output matcher en Pydantic-modellen.\n",
+    "### Eksempel"
    ]
   },
   {
@@ -661,7 +679,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vi kan bruke Literal for å definere våre egne typer til å bruke for type hinting. Vi kan type hinte variabler med CATEGORIES under og dette vil da modellen tolke på samme måte som at en int bare har lov til å være et heltall har denne \"typen\" bare lov til å være en av verdiene listet opp i Literal-objektet. Med andre ord får ikke modellen returnert noen andre kategorier enn de som er definert i lista. \n"
+    "## Begrense mulige verdier med Literal\n",
+    "Noen ganger ønsker vi å begrense hvilke verdier som er gyldige, slik som å si at category bare kan være én av fire forhåndsdefinerte valg.\n",
+    "Dette gjør vi med ```Literal```."
    ]
   },
   {
@@ -684,20 +704,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La oss sette sammen det vi har lært. Legg merke til at vi ikke lenger lister kategoriene i prompten (som på ingen måte garanterer at vi kun får ut en av kategorierne vi øsnker), men definerer de som et krav til strukturen på outputen fra modellen. "
+    "Nå kan vi bruke ```CATEGORIES``` som en type i Pydantic-modellen vår. Da vil modellen validere at det bare kommer svar som matcher én av disse fire.\n",
+    "### Eksempel: Strukturert output med begrensede kategorier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Literal\n",
     "\n",
-    "categorize_prompt = PromptTemplate.from_template(\n",
+    "categorize_prompt = PromptTemplate.from_template(               #Notice that we no longer pass the list of categories with the prompt.\n",
     "\"\"\"\n",
-    "Categorize the following feedback into the provided categories.\n",
+    "Categorize the following feedback into the provided categories. \n",
     "\n",
     "Feedback:\n",
     "<feedback>\n",
@@ -744,6 +765,17 @@
     ")\n",
     "\n",
     "result\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nå har vi satt opp en modell hvor vi er sikre på:\n",
+    "- At outputen er i riktig format\n",
+    "- At category bare kan være en av de forhåndsdefinerte verdiene\n",
+    "\n",
+    "Dette er utrolig nyttig hvis du skal bruke output videre i en ny prompt, i en database, eller som input til et system."
    ]
   },
   {
